--- a/StaticProgressBar/app/src/main/res/values/dimens.xml
+++ b/StaticProgressBar/app/src/main/res/values/dimens.xml
@@ -2,4 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
+
+    <dimen name="custom_progress_width">280dp</dimen>
+    <dimen name="custom_progress_height">50dp</dimen>
+    <dimen name="custom_progress_margin">10dp</dimen>
 </resources>
